--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -1,9 +1,13 @@
 .app {
     max-width: 1010px;
-    margin: 0 auto 0 auto;
+    margin: 20px auto;
+    padding: 10px;
     background-color: hsl(0, 0%, 65%);
     border-radius: 8px;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 .status-block {
     width: 100%;
