--- a/src/components/search-panel/search-panel.css
+++ b/src/components/search-panel/search-panel.css
@@ -1,13 +1,26 @@
 .search-panel {
+  max-width: 388px;
+  min-width: 388px;
     margin: 20px;
-    max-width: 970px;
+    
     line-height: 50px;
-    font-size: 30px;
+    
     border-radius: 10px;
   }
   
   .search-panel__prefix {
-    font-size: 25px;
+    font-size: 20px;
     color: #a18daa;
     margin-right: 10px;
+  }
+  @media (min-width: 1024px) {
+    .search-panel {
+      max-width: 970px;
+      min-width: 970px;
+      font-size: 30px;
+    }
+  
+    .search-panel__prefix {
+      font-size: 25px;
+    }
   }
